# ShopManager

database/: Baza danych.sql  CMakeLists.txt  Diagram.mwb  Jak komunikować sie z baza danych poradnik.docx  Phpmyadmin.docx  Plan, ocena.docx  Podstawowe-parametry-bazy-danych (1).docx  main.cpp
database/access/: cennik.accdb
database/include/: database.hpp
database/src/: database.cpp
depository/: CMakeLists.txt
depository/include/: despository.hpp
depository/src/: despository.cpp
hello/: CMakeLists.txt
purchase/: CMakeLists.txt
purchase/include/: purchase.hpp
purchase/src/: purchase.cpp
purchase/test/: test_purchase.cpp
